Fixes for sidebar CSS to resolve issues on smaller resolutions.

--- a/themes/suiteresponsive/css/style.css
+++ b/themes/suiteresponsive/css/style.css
@@ -4585,7 +4585,7 @@ body {
 .sidebar {
     display: none;
 }
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
     .sidebar {
         position: fixed;
         top: 51px;
@@ -4598,6 +4598,7 @@ body {
         overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
         background-color: #f5f5f5;
         border-right: 1px solid #eee;
+        min-width:215px !important;
     }
 }
 
@@ -4670,6 +4671,7 @@ li#moremenu {
 
 @media (min-width:1024px) {
     .col-md-2 {
+
         max-width:215px !important;
     }
     .col-md-offset-2 {
